Bug 1231257 - Flush individual port instead of flush OMX_ALL ports. r=sotaro